terraform/routing-tables.tf
#Resource: aws_route_table

resource "aws_route_table" "public" {
  #The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    #The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    #identifier of a VPC internet gateway or a virtual private gateway
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public"
  }
}


resource "aws_route_table" "private1" {
  #The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    #The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    #identifier of a VPC NAT gateway
    nat_gateway_id = aws_nat_gateway.gw1.id
  }

  tags = {
    Name = "private1"
  }
}

resource "aws_route_table" "private2" {
  #The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    #The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    #identifier of a VPC NAT gateway
    nat_gateway_id = aws_nat_gateway.gw2.id
  }

  tags = {
    Name = "private2"
  }
}
